--- a/senac.scss
+++ b/senac.scss
@@ -10,7 +10,7 @@ $blue: #014A8E;
 $font-family: 'Helvetica Neue', sans-serif;
 
 /*-- scss:rules --*/
-
+# https://github.com/hakimel/reveal.js/blob/680cf5edb8092801efb3e8756418829db86f7895/js/controllers/backgrounds.js#L296C4-L296C4
 .slide-background-content {
   // https://github.com/hakimel/reveal.js/issues/566
   background: url('https://raw.githubusercontent.com/celsocrivelaro/senac-theme/main/slide-comum.png');
