--- a/senac.scss
+++ b/senac.scss
@@ -70,6 +70,12 @@ section {
       font-weight: normal;
     }
 
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     ol, ul {
       list-style-type: none;
       width: 100%;
