--- a/senac.scss
+++ b/senac.scss
@@ -75,6 +75,11 @@ section {
       margin-left: auto;
       margin-right: auto;
     }
+    
+    video {
+      margin-left: auto;
+      margin-right: auto;
+    }
 
     ol, ul {
       list-style-type: none;
