--- a/senac.scss
+++ b/senac.scss
@@ -25,8 +25,8 @@ $blue: #014A8E;
 // Slide de Abertura
 section#title-slide {
   h1 {
-    font-size: 60px;
-    font-weight: normal;
+    font-size: 65px;
+    font-weight: bold;
     color: $blue;
     margin-top: 1px;
     margin-bottom: 1px;
